# RLMuscle

./: .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/Human/: Human.usd  data_prepare.hip
data/muscle/model/: bicep.usd
data/otto/: data_prepare.hip
examples/: example_couple2.py  example_human_import.py
src/UT/: UT_usd.py
src/VMuscle/: mesh_io.py  muscle.py  solver_muscle_bone_coupled_warp.py
